# Streamlit01

./: README.txt  app04 - copia.py  pyproject.toml
app/: Dockerfile  app04 - copia (2).py  app04.py  model.keras
