[tool.poetry]
name = "poetrytarea"
version = "0.1.0"
description = ""
authors = ["Sebastian Latorre <seba.latorre.diaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
streamlit = "^1.36.0"
scikit-learn = "^1.5.1"
tensorflow = "2.9"
tensorflow-io-gcs-filesystem = "0.26.0"
protobuf ="3.20"
numpy = "<2.0.0"
boto3 = "1.35.59"
plotly = "5.24.1"
altair = "4.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
